# ZnH5MD

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  dev-requirements.txt  postBuild  pyproject.toml  requirements.txt  setup.py
.github/workflows/: benchmark.yaml  lint.yaml  publish-to-pypi.yaml  publish.yaml  pytest.yaml
benchmarks/: read.py  read_benchmark.py  test_ase_io
benchmarks/src/: __init__.py  abc.py  ase.py  benchmark.py  chemfiles.py  generate.py  mda.py  mdtraj.py  plams.py  znh5md.py
data/: cu.h5
examples/: LoadLammps.ipynb  ase.ipynb  benchmark.ipynb  demo.ipynb
examples/benchmarks/: IO_Benchmark.ipynb
tests/: README.md  comparison.py  conftest.py  test_ASEH5MD.py  test_append_new_keys.py  test_arrays_str.py  test_ase_atoms.py  test_ase_plugin.py  test_atoms.py  test_benchmark.py  test_benchmarks.py  test_cli.py  test_connectivity.py  test_custom_file_handle.py  test_data_types.py  test_datasets.py  test_empty.py  test_entry.py  test_extend.py  test_format.py  test_h5md_path.py  test_high_dim_data.py  test_inconsistent_data.py  test_io.py  test_mask.py  test_mda.py  test_mdanalysis.py  test_misc.py  test_non_ascii.py  test_pbc_group.py  test_read_write.py  test_readers.py  test_recreate_h5py_file.py  test_ref_io.py  test_reference.py  test_restricted_read_write.py  test_single_obs_key.py  test_slice_access.py  test_string_arrays.py  test_timestep.py  (+4 more)
tests/datasets/: conftest.py  test_datasets.py
tests/format/: test_info_array_calc.py
tests/integration_tests/: _test_EspressoH5MD.py  test_H5MDTemplate.py  test_LammpsH5MD.py  test_dataset.py
tests/serialization/: test_serialisation.py
tests/unit_tests/: test_generators.py
znh5md/: __init__.py  ase_plugin.py  atoms.py  cli.py  config.py  format.py  io.py  misc.py  utils.py  znh5md.py
znh5md/core/: __init__.py  exceptions.py  generators.py  h5md.py
znh5md/format/: __init__.py
znh5md/interface/: __init__.py  io.py  read.py  write.py
znh5md/io/: __init__.py  base.py  reader.py
znh5md/path/: __init__.py
znh5md/serialization/: __init__.py  abc.py  base.py  decode.py  encode.py
znh5md/templates/: __init__.py  base.py  espresso.py  lammps.py
znh5md/units/: __init__.py
znh5md/writing/: __init__.py  base.py  reader.py
znh5md/znh5md/: __init__.py  base.py  h5ase.py  h5dask.py
