[tool.poetry]
name = "znh5md"
version = "0.3.0a1"
description = "ASE Interface for the H5MD format."
authors = ["zincwarecode <zincwarecode@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
h5py = "^3"
ase = "^3.22"
tqdm = "^4"
typer = {extras = ["all"], version = "^0"}
bidict = "^0.23.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pre-commit = "^2.20.0"
ruff = "^0.4"
mdanalysis = "^2.7.0"
coverage = "^7.5.3"

[tool.poetry.scripts]
znh5md = 'znh5md.cli:app'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["E", "F", "N", "C", "I"]
extend-ignore = [
    "D213", "D203", "N802", "N801"
]
