[tool.poetry]
name = "znh5md"
version = "0.3.3"
description = "ASE Interface for the H5MD format."
authors = ["zincwarecode <zincwarecode@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
h5py = "^3"
ase = "^3.22"
tqdm = "^4"
typer = {extras = ["all"], version = "^0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pre-commit = "^2.20.0"
ruff = "^0.4"
mdanalysis = "^2.7.0"
coverage = "^7.5.3"
pyh5md = "^1.0.0"
pytest-benchmark = {extras = ["histogram"], version = "^4.0.0"}
networkx = "^3.3"


[tool.poetry.group.benchmark.dependencies]
pandas = "^2.2.2"
chemfiles = "^0.10.4"
mdtraj = "^1.10.0"

[tool.poetry.scripts]
znh5md = 'znh5md.cli:app'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["E", "F", "N", "C", "I"]
extend-ignore = [
    "D213", "D203", "N802", "N801"
]

[tool.codespell]
skip = "poetry.lock,*.ipynb"

[tool.pytest.ini_options]
addopts = "-m 'not benchmark'"
