[project]
name = "znh5md"
version = "0.4.5"
description = "ASE Interface for the H5MD format."
authors = [
    { name = "Fabian Zills", email = "fzills@icp.uni-stuttgart.de" },
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ase>=3.24.0",
    "h5py>=3.12.1",
    "plams>=2025.102",
    "tqdm>=4.67.1",
    "typer>=0.15.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
znh5md = "znh5md.cli:app"

[project.urls]
Repository = "https://github.com/zincware/ZnH5MD"
Releases = "https://github.com/zincware/ZnH5MD/releases"
Discord = "https://discord.gg/7ncfwhsnm4"

[tool.ruff.lint]
select = ["E", "F", "N", "C", "I"]
extend-ignore = [
    "D213", "D203", "N802", "N801"
]

[tool.codespell]
skip = "poetry.lock,*.ipynb"

[tool.pytest.ini_options]
addopts = "-m 'not benchmark'"

[dependency-groups]
dev = [
    "chemfiles>=0.10.4",
    "coverage>=7.6.10",
    "mdanalysis>=2.8.0",
    "mdtraj>=1.10.2",
    "networkx>=3.4.2",
    "numpy<2",
    "pandas>=2.2.3",
    "plams>=2025.102",
    "pyh5md>=1.0.0",
    "pytest>=8.3.4",
    "pytest-benchmark[histogram]>=5.1.0",
    "pytest-cov>=6.1.1",
    "rdkit2ase>=0.1.4",
    "ruff>=0.11.8",
]

[project.entry-points."ase.ioformats"]
znh5md = "znh5md.ase_plugin:znh5md_format"
